kubernetes/apps/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  type: ClusterIP
  selector:
    app: heimdall
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
