kubernetes/apps/heimdall/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: heimdall
  namespace: heimdall
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
      sectionName: websecure
  hostnames:
    - heimdall.sample.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: heimdall
          port: 80
